--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ DerivedData
 *.xcuserstate
 project.xcworkspace
 
+.env
+
 # Android/IntelliJ
 #
 build/
@@ -30,6 +32,7 @@ build/
 local.properties
 *.iml
 *.hprof
+
 
 # node.js
 #
