--- a/app.json
+++ b/app.json
@@ -2,10 +2,10 @@
   "expo": {
     "name": "gofinances",
     "slug": "gofinances",
+    "scheme": "gofinances",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"]
   },
+  "packagerOpts": { "config": "metro.config.js" },
   "name": "gofinances"
 }
