--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
     "@expo-google-fonts/poppins": "^0.2.0",
     "@hookform/resolvers": "^2.8.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/art": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~42.0.1",
+    "@react-navigation/stack": "^6.0.7",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "date-fns": "^2.23.0",
+    "expo": "^42.0.3",
     "expo-app-loading": "^1.1.2",
+    "expo-apple-authentication": "^3.2.1",
+    "expo-auth-session": "~3.3.1",
     "expo-font": "~9.2.1",
+    "expo-random": "~11.2.0",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "install": "^0.13.0",
     "intl": "^1.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.13.0",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-pie-chart": "^2.0.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.2.0",
@@ -33,7 +42,6 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.1",
-    "victory-native": "^35.3.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -41,6 +49,7 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components-react-native": "^5.1.1",
+    "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.0.0"
   },
   "private": true
