--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,6 +153,13 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            storeFile file('gofinance.keystore')
+            storePassword '123456'
+            keyAlias 'gofinance'
+            keyPassword '123456'
+        }
     }
     buildTypes {
         debug {
@@ -161,7 +168,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
