--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "react-native start",
+    "test": "jest --watch-all"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.0",
@@ -21,6 +22,7 @@
     "expo-apple-authentication": "^3.2.1",
     "expo-auth-session": "~3.3.1",
     "expo-font": "~9.2.1",
+    "expo-google-app-auth": "^8.2.2",
     "expo-random": "~11.2.0",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
@@ -46,10 +48,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@testing-library/jest-native": "^4.0.2",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/react-native": "^7.2.0",
+    "@types/jest": "^27.0.1",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components-react-native": "^5.1.1",
+    "jest-expo": "^42.1.0",
+    "jest-styled-components": "^7.0.5",
     "react-native-svg-transformer": "^0.14.3",
+    "ts-jest": "^27.0.5",
     "typescript": "~4.0.0"
   },
   "private": true
